[package]
name = "gate"
version = "0.1.0"
edition = "2021"
description = "Core library for llm-gate: budget enforcement, pricing, and audit trails"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
