[package]
name = "llm-gate"
version = "0.1.0"
edition = "2021"
description = "LLM cost-control proxy — spending limits, audit trails, budget enforcement for AI agent systems"
license = "MIT"

[[bin]]
name = "llm-gate"
path = "src/main.rs"

[dependencies]
gate = { path = "../gate" }
clap = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
